--- a/custom_components/fingrid_easy_setup/manifest.json
+++ b/custom_components/fingrid_easy_setup/manifest.json
@@ -1,9 +1,9 @@
 {
   "domain": "fingrid_easy_setup",
   "name": "Fingrid Easy Setup",
-  "documentation": "URL_TO_YOUR_GITHUB_REPO_README_LATER",
-  "issue_tracker": "URL_TO_YOUR_GITHUB_ISSUES_LATER",
-  "codeowners": ["YOUR_GITHUB_USERNAME_LATER"],
+  "documentation": "https://github.com/Eetuheino03/HomeAssist-Fingrid.git",
+  "issue_tracker": "https://github.com/Eetuheino03/HomeAssist-Fingrid.git",
+  "codeowners": ["Eetuheino03"],
   "version": "0.1.0",
   "requirements": [],
   "iot_class": "cloud_polling",
